Can set LazyPaymentMethod at the invoice creation level
